<resources>
    <!--应用名称-->
    <string name="app_name">悟空问答</string>
    <!--底部导航栏选项-->
    <string name="bottom_home">首页</string>
    <string name="bottom_attention">关注</string>
    <string name="bottom_message">消息</string>
    <string name="bottom_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--首页-->
    <string name="home_title_center">推荐</string>
    <string name="home_title_right">提问</string>
    <!--关注-->
    <string name="attention_title_center">关注</string>
    <!--消息-->
    <string name="message_title_center">消息</string>
    <string name="message_item_1">收到赞同</string>
    <string name="message_item_2">我的粉丝</string>
    <string name="message_item_3">邀请回答</string>
    <string name="message_item_4">系统通知</string>


    <!--我的-->
    <string name="mine_title_left">好友</string>
    <string name="mine_menu_1">赞同</string>
    <string name="mine_menu_2">收藏</string>
    <string name="mine_menu_3">答题</string>
    <string name="mine_menu_4">草稿</string>
    <!--我的viewpager导航板块页面-->
    <string name="mine_content_1">动态</string>
    <string name="mine_content_2">回答</string>
    <string name="mine_content_3">提问</string>
    <!--没有内容时的提示-->
    <string name="mine_content_null_tip1">还没有动态</string>
    <string name="mine_content_null_tip2">还没有回答过问题</string>
    <string name="mine_content_null_tip3">还没有提过问题</string>
    <string name="mine_content_null_tip2_todo">去答题</string>
    <string name="todo_1">TODO</string>


    <!--全局-->
    <string name="main_user_edit_username">用户名</string>
    <string name="main_user_edit_password">密码</string>
    <string name="main_user_login">登录</string>
    <string name="main_user_register">注册</string>
    <string name="todo_3">TODO</string>


    <!--登录注册公共部分-->
    <string name="login_dialog_phone">手机号</string>
    <string name="login_dialog_password">密码</string>
    <string name="login_dialog_access">进入问答</string>
    <string name="login_dialog_register">先去注册</string>
    <string name="login_dialog_login_other">免密码登录</string>

    <!--以下活动-->
    <!--提问-->
    <string name="home_ask_cancel">取消</string>
    <string name="home_ask_commit">发布</string>

</resources>
