<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/main_login_register_margin"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/main_user_name"
        android:hint="@string/main_user_edit_username"
        android:layout_margin="@dimen/main_login_register_modle_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/main_user_password"
        android:hint="@string/main_user_edit_password"
        android:layout_margin="@dimen/main_login_register_modle_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/main_user_login"
        android:text="@string/main_user_login"
        android:layout_margin="@dimen/main_login_register_modle_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_user_register"
        android:text="@string/main_user_register"
        android:layout_margin="@dimen/main_login_register_modle_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>